infra/template.yml
Resources:
  VPCB9E5F0B4:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: NitrumStack/VPC
    Metadata:
      aws:cdk:path: NitrumStack/VPC/Resource
  VPCpublicSubnet1Subnet325F50B2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: sa-east-1a
      CidrBlock: 10.0.0.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet1
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet1/Subnet
  VPCpublicSubnet1RouteTableF591E248:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet1
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet1/RouteTable
  VPCpublicSubnet1RouteTableAssociationBFFA43B7:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCpublicSubnet1RouteTableF591E248
      SubnetId:
        Ref: VPCpublicSubnet1Subnet325F50B2
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet1/RouteTableAssociation
  VPCpublicSubnet1DefaultRoute19059ECD:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
      RouteTableId:
        Ref: VPCpublicSubnet1RouteTableF591E248
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet1/DefaultRoute
  VPCpublicSubnet1EIP2D50A06D:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet1
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet1/EIP
  VPCpublicSubnet1NATGatewayEEDEB5A1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - VPCpublicSubnet1EIP2D50A06D
          - AllocationId
      SubnetId:
        Ref: VPCpublicSubnet1Subnet325F50B2
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet1
    DependsOn:
      - VPCpublicSubnet1DefaultRoute19059ECD
      - VPCpublicSubnet1RouteTableAssociationBFFA43B7
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet1/NATGateway
  VPCpublicSubnet2Subnet2B2DFF71:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: sa-east-1b
      CidrBlock: 10.0.32.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet2
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet2/Subnet
  VPCpublicSubnet2RouteTable55DAB1BB:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet2
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet2/RouteTable
  VPCpublicSubnet2RouteTableAssociation0849466B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCpublicSubnet2RouteTable55DAB1BB
      SubnetId:
        Ref: VPCpublicSubnet2Subnet2B2DFF71
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet2/RouteTableAssociation
  VPCpublicSubnet2DefaultRoute9ED4D6BC:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
      RouteTableId:
        Ref: VPCpublicSubnet2RouteTable55DAB1BB
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet2/DefaultRoute
  VPCpublicSubnet3Subnet0CBD4ADC:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: sa-east-1c
      CidrBlock: 10.0.64.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet3
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet3/Subnet
  VPCpublicSubnet3RouteTable07F40487:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/publicSubnet3
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet3/RouteTable
  VPCpublicSubnet3RouteTableAssociation2A52E4AA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCpublicSubnet3RouteTable07F40487
      SubnetId:
        Ref: VPCpublicSubnet3Subnet0CBD4ADC
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet3/RouteTableAssociation
  VPCpublicSubnet3DefaultRoute6038437A:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
      RouteTableId:
        Ref: VPCpublicSubnet3RouteTable07F40487
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: NitrumStack/VPC/publicSubnet3/DefaultRoute
  VPCprivateSubnet1SubnetE522290D:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: sa-east-1a
      CidrBlock: 10.0.96.0/19
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: NitrumStack/VPC/privateSubnet1
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet1/Subnet
  VPCprivateSubnet1RouteTable41566AF9:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/privateSubnet1
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet1/RouteTable
  VPCprivateSubnet1RouteTableAssociation43FE0C59:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCprivateSubnet1RouteTable41566AF9
      SubnetId:
        Ref: VPCprivateSubnet1SubnetE522290D
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet1/RouteTableAssociation
  VPCprivateSubnet1DefaultRoute68B79172:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VPCpublicSubnet1NATGatewayEEDEB5A1
      RouteTableId:
        Ref: VPCprivateSubnet1RouteTable41566AF9
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet1/DefaultRoute
  VPCprivateSubnet2Subnet2F4D9530:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: sa-east-1b
      CidrBlock: 10.0.128.0/19
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: NitrumStack/VPC/privateSubnet2
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet2/Subnet
  VPCprivateSubnet2RouteTableBBE8BB2B:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/privateSubnet2
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet2/RouteTable
  VPCprivateSubnet2RouteTableAssociation45BBC356:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCprivateSubnet2RouteTableBBE8BB2B
      SubnetId:
        Ref: VPCprivateSubnet2Subnet2F4D9530
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet2/RouteTableAssociation
  VPCprivateSubnet2DefaultRouteD808B206:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VPCpublicSubnet1NATGatewayEEDEB5A1
      RouteTableId:
        Ref: VPCprivateSubnet2RouteTableBBE8BB2B
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet2/DefaultRoute
  VPCprivateSubnet3Subnet3C29037E:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: sa-east-1c
      CidrBlock: 10.0.160.0/19
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: NitrumStack/VPC/privateSubnet3
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet3/Subnet
  VPCprivateSubnet3RouteTableB07AC026:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: NitrumStack/VPC/privateSubnet3
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet3/RouteTable
  VPCprivateSubnet3RouteTableAssociation37740584:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCprivateSubnet3RouteTableB07AC026
      SubnetId:
        Ref: VPCprivateSubnet3Subnet3C29037E
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet3/RouteTableAssociation
  VPCprivateSubnet3DefaultRoute3301BB32:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: VPCpublicSubnet1NATGatewayEEDEB5A1
      RouteTableId:
        Ref: VPCprivateSubnet3RouteTableB07AC026
    Metadata:
      aws:cdk:path: NitrumStack/VPC/privateSubnet3/DefaultRoute
  VPCIGWB7E252D3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: NitrumStack/VPC
    Metadata:
      aws:cdk:path: NitrumStack/VPC/IGW
  VPCVPCGW99B986DC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: VPCIGWB7E252D3
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/VPC/VPCGW
  VPCRestrictDefaultSecurityGroupCustomResource59474679:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - VPCB9E5F0B4
          - DefaultSecurityGroup
      Account: "447655722442"
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: NitrumStack/VPC/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - arn:aws:ec2:sa-east-1:447655722442:security-group/
                        - Fn::GetAtt:
                            - VPCB9E5F0B4
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: NitrumStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: cdk-hnb659fds-assets-447655722442-sa-east-1
        S3Key: 7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs22.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: NitrumStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200
      aws:asset:property: Code
  KMSEndpointSecurityGroup3C14701E:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: NitrumStack/KMSEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - VPCB9E5F0B4
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - VPCB9E5F0B4
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/KMSEndpoint/SecurityGroup/Resource
  KMSEndpoint25A5F270:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - KMSEndpointSecurityGroup3C14701E
            - GroupId
      ServiceName: com.amazonaws.sa-east-1.kms
      SubnetIds:
        - Ref: VPCprivateSubnet1SubnetE522290D
        - Ref: VPCprivateSubnet2Subnet2F4D9530
        - Ref: VPCprivateSubnet3Subnet3C29037E
      VpcEndpointType: Interface
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/KMSEndpoint/Resource
  SSMEndpointSecurityGroup3A3F1835:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: NitrumStack/SSMEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - VPCB9E5F0B4
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - VPCB9E5F0B4
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/SSMEndpoint/SecurityGroup/Resource
  SSMEndpointE3B50236:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - SSMEndpointSecurityGroup3A3F1835
            - GroupId
      ServiceName: com.amazonaws.sa-east-1.ssm
      SubnetIds:
        - Ref: VPCprivateSubnet1SubnetE522290D
        - Ref: VPCprivateSubnet2Subnet2F4D9530
        - Ref: VPCprivateSubnet3Subnet3C29037E
      VpcEndpointType: Interface
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/SSMEndpoint/Resource
  CloudWatchLogsEndpointSecurityGroup3E72E04B:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: NitrumStack/CloudWatchLogsEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - VPCB9E5F0B4
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - VPCB9E5F0B4
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/CloudWatchLogsEndpoint/SecurityGroup/Resource
  CloudWatchLogsEndpointF23EDC4F:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - CloudWatchLogsEndpointSecurityGroup3E72E04B
            - GroupId
      ServiceName: com.amazonaws.sa-east-1.logs
      SubnetIds:
        - Ref: VPCprivateSubnet1SubnetE522290D
        - Ref: VPCprivateSubnet2Subnet2F4D9530
        - Ref: VPCprivateSubnet3Subnet3C29037E
      VpcEndpointType: Interface
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/CloudWatchLogsEndpoint/Resource
  S3EndpointD570F362:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - Ref: VPCprivateSubnet1RouteTable41566AF9
        - Ref: VPCprivateSubnet2RouteTableBBE8BB2B
        - Ref: VPCprivateSubnet3RouteTableB07AC026
        - Ref: VPCpublicSubnet1RouteTableF591E248
        - Ref: VPCpublicSubnet2RouteTable55DAB1BB
        - Ref: VPCpublicSubnet3RouteTable07F40487
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .s3
      VpcEndpointType: Gateway
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/S3Endpoint/Resource
  DynamoDBEndpointF5771873:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - Ref: VPCprivateSubnet1RouteTable41566AF9
        - Ref: VPCprivateSubnet2RouteTableBBE8BB2B
        - Ref: VPCprivateSubnet3RouteTableB07AC026
        - Ref: VPCpublicSubnet1RouteTableF591E248
        - Ref: VPCpublicSubnet2RouteTable55DAB1BB
        - Ref: VPCpublicSubnet3RouteTable07F40487
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .dynamodb
      VpcEndpointType: Gateway
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/DynamoDBEndpoint/Resource
  NitroInstanceSG51966EFB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Nitro Enclave EC2 instances
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - VPCB9E5F0B4
              - CidrBlock
          Description: Allow HTTPS from within VPC
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTPS inbound from NLB
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/NitroInstanceSG/Resource
  NitroInstanceSGfromNitrumStackNitroInstanceSG0BB189554434B5A3B33:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Intra-SG HTTPS
      FromPort: 443
      GroupId:
        Fn::GetAtt:
          - NitroInstanceSG51966EFB
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
          - NitroInstanceSG51966EFB
          - GroupId
      ToPort: 443
    Metadata:
      aws:cdk:path: NitrumStack/NitroInstanceSG/from NitrumStackNitroInstanceSG0BB18955:443
  NitroInstanceSGfromNitrumStackNitroInstanceSG0BB18955ICMPType824999AF3:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Intra-SG ping
      FromPort: 8
      GroupId:
        Fn::GetAtt:
          - NitroInstanceSG51966EFB
          - GroupId
      IpProtocol: icmp
      SourceSecurityGroupId:
        Fn::GetAtt:
          - NitroInstanceSG51966EFB
          - GroupId
      ToPort: -1
    Metadata:
      aws:cdk:path: NitrumStack/NitroInstanceSG/from NitrumStackNitroInstanceSG0BB18955:ICMP Type 8
  EnclaveKey3137F560:
    Type: AWS::KMS::Key
    Properties:
      Description: Nitrum dev enclave key — symmetric DEK wrapping (GenerateDataKey + attested Decrypt)
      EnableKeyRotation: false
      KeyPolicy:
        Statement:
          - Action: kms:*
            Effect: Allow
            Principal:
              AWS: arn:aws:iam::447655722442:root
            Resource: "*"
        Version: "2012-10-17"
      KeySpec: SYMMETRIC_DEFAULT
      KeyUsage: ENCRYPT_DECRYPT
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: NitrumStack/EnclaveKey/Resource
  EnclaveTable3CA6040F:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: pk
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      KeySchema:
        - AttributeName: pk
          KeyType: HASH
      SSESpecification:
        SSEEnabled: true
      TableName: nitrum-dev
      TimeToLiveSpecification:
        AttributeName: ttl
        Enabled: true
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: NitrumStack/EnclaveTable/Resource
  NitrumKmsKeyParam301591B4:
    Type: AWS::SSM::Parameter
    Properties:
      Description: KMS key ID for Nitrum data-plane (enclave)
      Name: /nitrum/kms_key_id
      Type: String
      Value:
        Ref: EnclaveKey3137F560
    Metadata:
      aws:cdk:path: NitrumStack/NitrumKmsKeyParam/Resource
  NitrumDynamoTableParam18044F90:
    Type: AWS::SSM::Parameter
    Properties:
      Description: DynamoDB table name for Nitrum data-plane (enclave)
      Name: /nitrum/dynamodb_table
      Type: String
      Value:
        Ref: EnclaveTable3CA6040F
    Metadata:
      aws:cdk:path: NitrumStack/NitrumDynamoTableParam/Resource
  EnclaveLogGroupDFBE17EF:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /nitrum/dev/enclave
      RetentionInDays: 7
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: NitrumStack/EnclaveLogGroup/Resource
  InstanceRole3CCE2F1D:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/AmazonSSMManagedInstanceCore
    Metadata:
      aws:cdk:path: NitrumStack/InstanceRole/Resource
  InstanceRoleDefaultPolicy1531605C:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - s3:GetBucket*
              - s3:GetObject*
              - s3:List*
            Effect: Allow
            Resource:
              - arn:aws:s3:::cdk-hnb659fds-assets-447655722442-sa-east-1
              - arn:aws:s3:::cdk-hnb659fds-assets-447655722442-sa-east-1/*
          - Action:
              - kms:Decrypt
              - kms:GenerateDataKey
              - kms:GenerateDataKeyWithoutPlaintext
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - EnclaveKey3137F560
                - Arn
          - Action:
              - dynamodb:BatchGetItem
              - dynamodb:BatchWriteItem
              - dynamodb:ConditionCheckItem
              - dynamodb:DeleteItem
              - dynamodb:DescribeTable
              - dynamodb:GetItem
              - dynamodb:GetRecords
              - dynamodb:GetShardIterator
              - dynamodb:PutItem
              - dynamodb:Query
              - dynamodb:Scan
              - dynamodb:UpdateItem
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - EnclaveTable3CA6040F
                - Arn
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - EnclaveLogGroupDFBE17EF
                - Arn
          - Action:
              - ssm:DescribeParameters
              - ssm:GetParameter
              - ssm:GetParameterHistory
              - ssm:GetParameters
            Effect: Allow
            Resource:
              - Fn::Join:
                  - ""
                  - - arn:aws:ssm:sa-east-1:447655722442:parameter
                    - Ref: NitrumDynamoTableParam18044F90
              - Fn::Join:
                  - ""
                  - - arn:aws:ssm:sa-east-1:447655722442:parameter
                    - Ref: NitrumKmsKeyParam301591B4
        Version: "2012-10-17"
      PolicyName: InstanceRoleDefaultPolicy1531605C
      Roles:
        - Ref: InstanceRole3CCE2F1D
    Metadata:
      aws:cdk:path: NitrumStack/InstanceRole/DefaultPolicy/Resource
  NitroLaunchTemplateProfile74FD152A:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: InstanceRole3CCE2F1D
    Metadata:
      aws:cdk:path: NitrumStack/NitroLaunchTemplate/Profile
  NitroLaunchTemplateFCC44297:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        BlockDeviceMappings:
          - DeviceName: /dev/xvda
            Ebs:
              DeleteOnTermination: true
              Encrypted: true
              VolumeSize: 32
              VolumeType: gp3
        EnclaveOptions:
          Enabled: true
        IamInstanceProfile:
          Arn:
            Fn::GetAtt:
              - NitroLaunchTemplateProfile74FD152A
              - Arn
        ImageId:
          Ref: SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter
        InstanceType: m6i.xlarge
        MetadataOptions:
          HttpTokens: required
          InstanceMetadataTags: enabled
        SecurityGroupIds:
          - Fn::GetAtt:
              - NitroInstanceSG51966EFB
              - GroupId
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                Value: NitrumStack/NitroLaunchTemplate
          - ResourceType: volume
            Tags:
              - Key: Name
                Value: NitrumStack/NitroLaunchTemplate
        UserData:
          Fn::Base64:
            Fn::Sub:
              - |
                Content-Type: multipart/mixed; boundary="//"
                MIME-Version: 1.0

                --//
                Content-Type: text/cloud-config; charset="us-ascii"
                MIME-Version: 1.0
                Content-Transfer-Encoding: 7bit
                Content-Disposition: attachment; filename="cloud-config.txt"

                #cloud-config
                bootcmd:
                  - [ dnf, install, aws-nitro-enclaves-cli, aws-nitro-enclaves-cli-devel, htop, git, jq, -y ]

                --//
                Content-Type: text/x-shellscript; charset="us-ascii"
                MIME-Version: 1.0
                Content-Transfer-Encoding: 7bit
                Content-Disposition: attachment; filename="userdata.txt"

                #!/bin/bash

                exec > >(tee /var/log/user-data.log | logger -t user-data -s 2>/dev/console) 2>&1

                set -x
                set +e

                usermod -aG docker ec2-user
                usermod -aG ne ec2-user

                # ── Nitro enclaves allocator ──────────────────────────────────────────────────
                ALLOCATOR_YAML=/etc/nitro_enclaves/allocator.yaml
                sed -r "s/^(\s*memory_mib\s*:\s*).*/\16144/" -i "$ALLOCATOR_YAML"
                sed -r "s/^(\s*cpu_count\s*:\s*).*/\12/" -i "$ALLOCATOR_YAML"

                # ── vsock-proxy allowlist ─────────────────────────────────────────────────────
                # ${__REGION__} is substituted by CloudFormation Fn::Sub before bash runs.
                cat > /etc/nitro_enclaves/vsock-proxy.yaml <<'VSOCK_EOF'
                allowlist:
                - {address: 169.254.169.254, port: 80}
                VSOCK_EOF

                systemctl enable --now docker
                systemctl enable --now nitro-enclaves-allocator.service
                systemctl enable --now nitro-enclaves-vsock-proxy.service

                # ── IMDS path for enclave: vsock 8002 → parent IMDS:80 (enclave viproxy default http://127.0.0.1:8099/latest) ──
                cat > /etc/systemd/system/enclave-imds-proxy.service <<'IMDS_PROXY_UNIT'
                [Unit]
                Description=Forward enclave vsock 8002 to EC2 IMDS (HTTP)
                After=nitro-enclaves-vsock-proxy.service

                [Service]
                Type=simple
                Restart=always
                RestartSec=2
                ExecStart=/bin/bash -ce 'exec /usr/bin/vsock-proxy 8002 169.254.169.254 80 --config /etc/nitro_enclaves/vsock-proxy.yaml -w 5'

                [Install]
                WantedBy=multi-user.target
                IMDS_PROXY_UNIT

                systemctl daemon-reload
                systemctl enable --now enclave-imds-proxy.service

                # ── Wait for services before pulling containers and downloading EIF ───────────
                sleep 5

                # ── Pull control-plane image and download enclave EIF from S3 ────────────────
                CONTROL_PLANE_IMAGE="matzapata/nitrum-control-plane:latest"
                EIF_ASSET_HASH="${__EIF_ASSET_HASH__}"

                docker pull "$CONTROL_PLANE_IMAGE"
                aws s3 cp "s3://${__EIF_S3_BUCKET__}/${__EIF_S3_KEY__}" /usr/bin/enclave.eif --region "${__REGION__}"
                echo "Deployed EIF asset hash: $EIF_ASSET_HASH"

                # ── Systemd unit for control-plane (gvproxy + enclave) ───────────────────────
                cat > /etc/systemd/system/control-plane.service <<'UNIT_EOF'
                [Unit]
                Description=Nitrum control-plane (gvproxy + enclave)
                After=docker.service nitro-enclaves-allocator.service
                Requires=docker.service

                [Service]
                Type=simple
                Restart=always
                RestartSec=10
                ExecStartPre=-/usr/bin/docker rm -f control-plane
                ExecStart=/usr/bin/docker run --rm --name control-plane \
                  --privileged \
                  --security-opt seccomp=unconfined \
                  -p 443:443 \
                  -p 9090:9090 \
                  -v /usr/bin/enclave.eif:/app/enclave.eif \
                  matzapata/nitrum-control-plane:latest /app/control-plane --debug-mode
                ExecStop=/usr/bin/docker stop -t 10 control-plane
                TimeoutStopSec=30

                [Install]
                WantedBy=multi-user.target
                UNIT_EOF

                systemctl daemon-reload
                systemctl enable --now control-plane.service

                --//--
              - __REGION__: sa-east-1
                __EIF_S3_BUCKET__: cdk-hnb659fds-assets-447655722442-sa-east-1
                __EIF_S3_KEY__: 7dfd8dcf283e06f3d173160ff22a98deb0aaa8c0217c7ab40a15e88aece8a020.eif
                __EIF_ASSET_HASH__: 7dfd8dcf283e06f3d173160ff22a98deb0aaa8c0217c7ab40a15e88aece8a020
      LaunchTemplateName: nitrum-dev-7dfd8dcf283e
      TagSpecifications:
        - ResourceType: launch-template
          Tags:
            - Key: Name
              Value: NitrumStack/NitroLaunchTemplate
    DependsOn:
      - InstanceRoleDefaultPolicy1531605C
      - InstanceRole3CCE2F1D
    Metadata:
      aws:cdk:path: NitrumStack/NitroLaunchTemplate/Resource
  NitroASGC027A699:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      DesiredCapacity: "1"
      HealthCheckGracePeriod: 300
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId:
          Ref: NitroLaunchTemplateFCC44297
        Version:
          Fn::GetAtt:
            - NitroLaunchTemplateFCC44297
            - LatestVersionNumber
      MaxSize: "1"
      MinSize: "1"
      TargetGroupARNs:
        - Ref: NitroTargetGroupFD78913F
      VPCZoneIdentifier:
        - Ref: VPCprivateSubnet1SubnetE522290D
        - Ref: VPCprivateSubnet2Subnet2F4D9530
        - Ref: VPCprivateSubnet3Subnet3C29037E
    UpdatePolicy:
      AutoScalingRollingUpdate:
        SuspendProcesses:
          - HealthCheck
          - ReplaceUnhealthy
          - AZRebalance
          - AlarmNotification
          - ScheduledActions
          - InstanceRefresh
      AutoScalingScheduledAction:
        IgnoreUnmodifiedGroupSizeProperties: true
    Metadata:
      aws:cdk:path: NitrumStack/NitroASG/ASG
  NitroNLB859F3B07:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - NitroNLBSecurityGroupA927ACFB
            - GroupId
      Subnets:
        - Ref: VPCpublicSubnet1Subnet325F50B2
        - Ref: VPCpublicSubnet2Subnet2B2DFF71
        - Ref: VPCpublicSubnet3Subnet0CBD4ADC
      Type: network
    DependsOn:
      - VPCpublicSubnet1DefaultRoute19059ECD
      - VPCpublicSubnet1RouteTableAssociationBFFA43B7
      - VPCpublicSubnet2DefaultRoute9ED4D6BC
      - VPCpublicSubnet2RouteTableAssociation0849466B
      - VPCpublicSubnet3DefaultRoute6038437A
      - VPCpublicSubnet3RouteTableAssociation2A52E4AA
    Metadata:
      aws:cdk:path: NitrumStack/NitroNLB/Resource
  NitroNLBSecurityGroupA927ACFB:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB NitrumStackNitroNLB73CBAFFF
      SecurityGroupEgress:
        - CidrIp: 255.255.255.255/32
          Description: Disallow all traffic
          FromPort: 252
          IpProtocol: icmp
          ToPort: 86
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/NitroNLB/SecurityGroup/Resource
  NitroNLBHTTPSListenerCD5E1A94:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: NitroTargetGroupFD78913F
          Type: forward
      LoadBalancerArn:
        Ref: NitroNLB859F3B07
      Port: 443
      Protocol: TCP
    Metadata:
      aws:cdk:path: NitrumStack/NitroNLB/HTTPSListener/Resource
  NitroTargetGroupFD78913F:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 443
      Protocol: TCP
      TargetType: instance
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: NitrumStack/NitroTargetGroup/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/+1XWY/bNhD+LdFjwKhZJ0iLfdPaRmrs5drOFqlhGGNyVsuYIhUe2hqC/ntBUvK1uwnQ5MEo+kRyOBx+M5yLvbT3/ix9+woezRvK1m8EX6X11AJdE3g0yxppL63vSjqvEwn2I1h8hI1JzpPXCUmMW0m0fSXvee40WK5kch44CzxgmW1KTxi7leA0acg3WDSvwGLSLEiCElYCB9JMXVkqbZNzqx3u0X9XxnpBJu40C9K/l3fjPokXTYPgeZ1ABVzAigtuN38p2V1clXTE2jnlTF8IRdftuoAyChmVt/IKnKQP3fW8rD70j9jBGJ7LUVl9yBjTaMyt7GtsLZK8DiqfBIoAhLGb7Vsm5/PkdbI4GYCngeJkgJwGihhZMZ78bKKcxZmPwh19R8uMUZQHAVtmPxmOxn7Y+R5po/2nB+o9CHMCNv8xGKeD5ERgnA6SE4ERw3IkLWqJ26 [...]
    Metadata:
      aws:cdk:path: NitrumStack/CDKMetadata/Default
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Outputs:
  NLBDnsName:
    Description: NLB DNS name - point your domain CNAME here
    Value:
      Fn::GetAtt:
        - NitroNLB859F3B07
        - DNSName
  KmsKeyId:
    Description: KMS key ID
    Value:
      Ref: EnclaveKey3137F560
  DynamoTableName:
    Description: DynamoDB table name
    Value:
      Ref: EnclaveTable3CA6040F
  EC2InstanceRoleARN:
    Description: EC2 Instance Role ARN
    Value:
      Fn::GetAtt:
        - InstanceRole3CCE2F1D
        - Arn
  ASGGroupName:
    Description: ASG Group Name
    Value:
      Ref: NitroASGC027A699
